k8s-tools/envoy-gateway-api/quickstart.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway-api-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  # here to set some config for and envoy gateway that will be created using this gateway class
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: gateway-configuration
    namespace: envoy-gateway-api
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-api
spec:
  gatewayClassName: envoy-gateway-api-class
  infrastructure:
    labels:
      app: envoy-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    # - name: https
    #   protocol: HTTPS
    #   port: 443
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: envoy-gateway-tls
    #         namespace: envoy-gateway-api
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: nginxdemos/hello:0.4
          ports:
            - containerPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: envoy-gateway
      sectionName: http
      namespace: envoy-gateway-api
  # hostnames:
  #   - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: hello
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
